[project]
name = "ravinkumar-blog"
version = "0.1.0"
description = "ravinkumar.com Pelican blog"
requires-python = ">=3.12"
dependencies = [
    "pelican[markdown]>=4.12.0",
    "pelican-render-math",
    "pelican-simple-footnotes",
    "pelican-sitemap",
    "typogrify",
    "markdown",
    "nbconvert",
    "ipykernel",
    "pyyaml",
]

[tool.uv]
# Run all pelican commands from the dev/ directory:
#   uv run pelican -r -s pelicanconf.py    (dev server)
#   uv run pelican -s publishconf.py       (production build)
